--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Android Test</string>
+    <string name="edit_text_search_book_volume_hint">Book volume</string>
 </resources>
