--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Android Test</string>
     <string name="edit_text_search_book_volume_hint">Book volume</string>
+    <string name="publish_info">Published by %s on %s</string>
+    <string name="authors">Authors: %s</string>
 </resources>
